--- a/css/styles.css
+++ b/css/styles.css
@@ -453,6 +453,7 @@ feachers-container {
 .footer-media-box {
   display: inline-block;
   align-items: center;
+  margin-right: 80px;
 }
 .social-media-text {
   margin-bottom: 16px;
@@ -495,21 +496,31 @@ feachers-container {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 16px;
 }
 .footer-form {
   display: flex;
+  gap: 24px;
 }
 
 .footer-input {
   border-radius: 4px;
   border: 1px solid var(--WHITE, #fff);
+  color: #ffffff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   width: 264px;
   height: 40px;
   flex-shrink: 0;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
-.footer-input::placeholder {
+.footer-input .placeholder {
+  color: #ffffff;
 }
 
 .footer-form-button {
@@ -523,8 +534,20 @@ feachers-container {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto";
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
 }
-
+.footer-telegram {
+  margin-left: 16px;
+}
 /*=================================================*/
 .backdrop {
   position: fixed;
@@ -533,26 +556,28 @@ feachers-container {
   width: 100%;
   height: 100%;
   background: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   /*z-index: 10;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);*/
+  */
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 24px;
   background-color: #fcfcfc;
   border-radius: 4px;
   width: 408px;
-  height: 584px;
-  filter: drop-shadow(0px 1px 1px rgba(0, 0, 0, 0.14))
-    drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.12))
-    drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.2));
+  min-height: 584px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
+
 .close-button {
   position: absolute;
   display: flex;
@@ -607,15 +632,70 @@ feachers-container {
   line-height: 1.16;
   letter-spacing: 0.04em;
 }
-.imput-wrap {
-}
-.modal-icon {
-}
+
 .modal-field {
+  padding: 72px 24px 24px 24px;
+  margin-bottom: 8px;
 }
 .modal-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
 }
+.imput-wrap {
+  position: relative;
+}
+.imput-wrap .input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.imput-wrap .input:focus {
+  border-color: #4d5ae5;
+}
+.modal-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.imput-wrap .input:focus .modal-icon {
+  fill: #4d5ae5;
+}
+
+.modal-field-comment {
+  margin-bottom: 16px;
+}
+.textarea-comment {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.textarea-comment:focus {
+  border-color: #4d5ae5;
+}
+
 .privacy-container {
+  margin-bottom: 24px;
 }
 .visually-hidden {
 }
@@ -623,20 +703,28 @@ feachers-container {
   color: var(--LIGHT-SLATE, #8e8f99);
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.16;
   letter-spacing: 0.04em;
+  line-height: 1.17;
 }
 .privacy-checkbox {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   width: 16px;
   height: 16px;
   fill: transparent;
   stroke-width: 1px;
   stroke: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.4));
 }
-.privacy-checkbox:checked {
-  fill: #ffffff;
+.visually-hidden .privacy-checkbox:checked {
   border: none;
   background-color: #404bbf;
+  fill: #f4f4fd;
 }
 .privacy-icon {
 }
@@ -646,10 +734,20 @@ feachers-container {
 }
 .modal-submit-button {
   display: inline-flex;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  border: none;
   padding: 16px 32px;
   align-items: flex-start;
   gap: 10px;
   border-radius: 4px;
   background: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
