--- a/css/styles.css
+++ b/css/styles.css
@@ -542,7 +542,6 @@ feachers-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Roboto";
   cursor: pointer;
   background-color: #4d5ae5;
   border: none;
@@ -626,10 +625,7 @@ feachers-container {
   margin-top: 24px;
   margin-bottom: 16px;
 }
-.form-callback {
-}
-
-.textarea {
+.form-callback .textarea {
   color: rgba(46, 47, 66, 0.4);
   font-size: 12px;
   font-weight: 400;
@@ -648,8 +644,7 @@ feachers-container {
   display: block;
   margin-bottom: 4px;
 }
-.input-wrap {
-}
+
 .input-wrap {
   position: relative;
 }
@@ -681,7 +676,8 @@ feachers-container {
 .modal-input:focus-within {
   border-color: #4d5ae5;
 }
-.modal-icon:focus-within {
+
+.modal-icon:focus {
   fill: #4d5ae5;
 }
 
@@ -739,8 +735,10 @@ feachers-container {
   background-color: #404bbf;
   fill: #f4f4fd;
 }
-.privacy-icon {
+.privacy-icon:checked {
+  background-color: #404bbf;
 }
+
 .privacy-link {
   color: #4d5ae5;
   text-decoration-line: underline;
@@ -765,5 +763,8 @@ feachers-container {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.modal-submit-button:hover,
 .modal-submit-button:focus {
+  background-color: #404bbf;
 }
