--- a/css/styles.css
+++ b/css/styles.css
@@ -528,7 +528,6 @@ feachers-container {
 
 .footer-form-button {
   padding: 8px 24px;
-  gap: 16px;
   color: var(--WHITE, #fff);
   text-align: center;
   font-family: "Roboto", sans-serif;
@@ -550,9 +549,8 @@ feachers-container {
 .footer-telegram {
   margin-left: 16px;
 }
-/*=================================================*/
+/*=====================MODAL==============================*/
 .backdrop {
-  padding: 72px 24px 24px 24px;
   position: fixed;
   top: 0;
   left: 0;
@@ -561,14 +559,11 @@ feachers-container {
   background: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /*z-index: 10;
-  opacity: 0;
-  pointer-events: none;
-  */
 }
+
 .modal {
   position: absolute;
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -622,9 +617,9 @@ feachers-container {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-top: 24px;
   margin-bottom: 16px;
 }
+
 .form-callback .textarea {
   color: rgba(46, 47, 66, 0.4);
   font-size: 12px;
@@ -659,6 +654,7 @@ feachers-container {
   padding-left: 38px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .sprite {
   fill: none; /* або fill: transparent; */
 }
@@ -667,8 +663,6 @@ feachers-container {
   left: 16px;
   top: 50%;
   display: inline-block;
-  width: 1em;
-  height: 1em;
   fill: currentColor;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -677,7 +671,7 @@ feachers-container {
   border-color: #4d5ae5;
 }
 
-.modal-icon:focus {
+.modal-input:focus + .modal-icon {
   fill: #4d5ae5;
 }
 
@@ -706,12 +700,11 @@ feachers-container {
 .privacy-container {
   margin-bottom: 24px;
 }
-.visually-hidden {
+.visually-hidden:checked {
 }
 .privacy-label {
   color: var(--LIGHT-SLATE, #8e8f99);
   font-size: 12px;
-  font-weight: 400;
   letter-spacing: 0.04em;
   line-height: 1.17;
 }
@@ -727,16 +720,13 @@ feachers-container {
   width: 16px;
   height: 16px;
   fill: transparent;
-  stroke-width: 1px;
-  stroke: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.4));
+  margin-right: 8px;
 }
-.visually-hidden .privacy-checkbox:checked {
+
+.input-checkbox:checked + .privacy-label .privacy-checkbox {
   border: none;
   background-color: #404bbf;
   fill: #f4f4fd;
-}
-.privacy-icon:checked {
-  background-color: #404bbf;
 }
 
 .privacy-link {
