--- a/css/styles.css
+++ b/css/styles.css
@@ -551,6 +551,7 @@ feachers-container {
 }
 /*=====================MODAL==============================*/
 .backdrop {
+  padding: 72px 24px 24px 24px;
   position: fixed;
   top: 0;
   left: 0;
